--- a/manifests/applications/api-gateway.yaml
+++ b/manifests/applications/api-gateway.yaml
@@ -21,11 +21,11 @@ spec:
           imagePullPolicy: Always
           resources:
             requests:
-              cpu: "100m"
-              memory: "128Mi"
-            limits:
+              memory: "512Mi"
               cpu: "200m"
-              memory: "256Mi"
+            limits:
+              memory: "1Gi"
+              cpu: "500m"
           ports:
             - containerPort: 8765
 
