chore: add test credential for email request

--- a/manifests/applications/iam-service.yaml
+++ b/manifests/applications/iam-service.yaml
@@ -47,6 +47,10 @@ spec:
                 secretKeyRef:
                   name: iam-database-secrets
                   key: mysql_password
+            - name: EMAIL_USER
+              value: "erich56000@gmail.com"
+            - name: EMAIL_PASS
+              value: "bgwq uznp pxgy scaw"
 
 ---
 
