--- a/manifests/applications/iam-service.yaml
+++ b/manifests/applications/iam-service.yaml
@@ -51,6 +51,8 @@ spec:
               value: "erich56000@gmail.com"
             - name: EMAIL_PASS
               value: "bgwq uznp pxgy scaw"
+            - name: EUREKA_SERVER_HOST
+              value: naming-service
 
 ---
 
