chore: add base http in EUREKA_SERVER_HOST

--- a/manifests/applications/api-gateway.yaml
+++ b/manifests/applications/api-gateway.yaml
@@ -30,7 +30,7 @@ spec:
             - containerPort: 8765
           env:
             - name: EUREKA_SERVER_HOST
-              value: naming-service
+              value: http://naming-service
 
 ---
 
