--- a/manifests/applications/iam-service.yaml
+++ b/manifests/applications/iam-service.yaml
@@ -68,10 +68,15 @@ metadata:
   namespace: uni-ride
   labels:
     app: iam-service
+  annotations:
+    networking.gke.io/health-check-path: "/actuator/health"
+    networking.gke.io/health-check-port: "9300"
 spec:
-    selector:
-      app: iam-service
-    ports:
-      - protocol: TCP
-        port: 9300
-        targetPort: 9300
+  type: LoadBalancer
+  loadBalancerIP: 34.54.62.226
+  selector:
+    app: iam-service
+  ports:
+    - name: http
+      port: 80           # clients talk to port 80
+      targetPort: 9300
