--- a/manifests/infra/kafka.yml
+++ b/manifests/infra/kafka.yml
@@ -94,5 +94,7 @@ data:
   KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
   KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT"
   KAFKA_LISTENERS: "PLAINTEXT://0.0.0.0:29092,PLAINTEXT_HOST://0.0.0.0:9092"
-  KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092"
+  KAFKA_ADVERTISED_LISTENERS: |
+    PLAINTEXT://broker.kafka.svc.cluster.local:29092,
+    PLAINTEXT_HOST://localhost:9092
   KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: "1"
