--- a/manifests/applications/in-trip-communication-service.yaml
+++ b/manifests/applications/in-trip-communication-service.yaml
@@ -47,6 +47,10 @@ spec:
                 secretKeyRef:
                   name: in-trip-communication-database-secrets
                   key: mysql_password
+            - name: KAFKA_HOST
+              value: broker.kafka.svc.cluster.local
+            - name: KAFKA_PORT
+              value: "29092"
 
 ---
 
