--- a/manifests/applications/matching-routing-service.yaml
+++ b/manifests/applications/matching-routing-service.yaml
@@ -47,10 +47,10 @@ spec:
                 secretKeyRef:
                   name: routing-matching-database-secrets
                   key: mysql_password
-            - name: KAFKA_BROKER_HOST
+            - name: KAFKA_HOST
               value: broker.kafka.svc.cluster.local
-            - name: KAFKA_BROKER_PORT
-              value: "9092"
+            - name: KAFKA_PORT
+              value: "29092"
 
 ---
 
