feat: add url rewrite for matching routing service

--- a/manifests/applications/api-gateway.yaml
+++ b/manifests/applications/api-gateway.yaml
@@ -101,3 +101,18 @@ spec:
             path:
               type: ReplacePrefixMatch
               replacePrefixMatch: /
+    - matches:
+        - path:
+            type: PathPrefix
+            value: /matching-routing-service
+      backendRefs:
+        - group: ""
+          kind: Service
+          name: matching-routing-service
+          port: 9100
+      filters:
+        - type: URLRewrite
+          urlRewrite:
+            path:
+              type: ReplacePrefixMatch
+              replacePrefixMatch: /
